style: Fix some layout problems

--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ html, body {
 .appicon{
 	width: 100px;
 	position:relative;
-	left: 33.5%;
+	left: 40%;
 	top:160px;
 	
 }
@@ -180,39 +180,57 @@ html, body {
 	height: 400px;
 	background: #161616;
 	z-index: 3;
-	
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.story2-content {
+  position: relative;
+  left: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.story2-item {
+  margin: 15px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+}
+
+.story2-item img {
+  height: 50px;
+  margin-right: 20px;
 }
 
 
+.ftr {
+  padding: 60px 0;
+}
 
+.ftr1, .ftr2{
+  padding: 5px 0;
+}
+
+
+.footerwording, .copyright {
+	letter-spacing: 1.3px;
+	color:#A4A4A4;
+  position: relative;
+  left: 40%;
+}
 
 .footerwording{
 	font-size: 1em;
 	font-family: 'Caveat', cursive;
-	letter-spacing: 1.3px;
-	color:#A4A4A4;
-	position: relative;
-	left:120%;
-	top: 90px;
-	display: flex;
-	
 }
 
-
-.ftr1,.ftr2{
-	width: 400px;
-}
 .copyright{
-	position: relative;
-	left:120%;
-	top: 97px;
 	font-size: .5em;
 	font-family: 'Open Sans', sans-serif;
-	letter-spacing: 1.3px;
-	color:#A4A4A4;
-	display: flex;
-	
-	
 }
 
 
@@ -363,8 +381,8 @@ _::-webkit-:host:not(:root:root), .parallax1 {
 
 .gallerybox{
 	position: absolute;
-	right: 40px;
-	top:60px;
+	right: 30px;
+	top: 30px;
   display: flex;
   align-items: center;
 }
