--- a/mobile.css
+++ b/mobile.css
@@ -1,15 +1,13 @@
 @media all and (max-width: 480px) {
 
   .bg {
-	width: 1000px;
-	opacity: .3;
-	z-index: 1;
-	}
+    width: 1000px;
+    opacity: .3;
+    z-index: 1;
+  }
 
 
-
-
-.parallax1 { 
+  .parallax1 { 
     /* The image used */
     background-image: url("img/iphone6-3.jpg");
 
@@ -20,86 +18,115 @@
     background-size: 1000px;
     line-height: 1.3;
     color: #2B2B2B;
-}
+  }
+
+
+  .visual{
+    font-size: 4em;
+    font-family: 'Nixie One', cursive;
+    letter-spacing: 1.3px;
+    color:#D5D5D5;
+    position: relative;
+    left: 75px;
+    top: 15%;
+    opacity:.9;
+    z-index: 1;
+  }
+
+
+  .lenon{
+    opacity: 0;
+  }
+
+  .p2{
+    margin-top: 57px;
+  }
+
+  .scroll{
+    opacity: 0;
+  }
 
 
 
-
-.visual{
-	font-size: 4em;
-	font-family: 'Nixie One', cursive;
-	letter-spacing: 1.3px;
-	color:#D5D5D5;
-	position: relative;
-	left: 75px;
-	top: 15%;
-	opacity:.9;
-	z-index: 1;
-}
-
-
-	.lenon{
-		opacity: 0;
-	}
-
-	.p2{
-		margin-top: 57px;
-	}
-	
-	.scroll{
-		opacity: 0;
-	}
+  .why{
+    width: 100%;
+    position: relative;
+    left: 0;
+    color:#373737;
+    letter-spacing: 1.3px;
+    line-height: 31.5px;
+    font-size: 1em;
+    margin-top: 0; 
+  }
 
 
 
-	.why{
-	width: 100%;
-	position: relative;
-	left: 0;
-	color:#373737;
-	letter-spacing: 1.3px;
-	line-height: 31.5px;
-	font-size: 1em;
-	margin-top: 0; 
-}
+  .prosgraphic{
+    width: 13%;
+    min-width: 180px;
+    position: relative;
+    left: 20%;
+
+    opacity: .9;
+  }
+
+
+  .footerwording{
+    left:50px;
+
+  }
+
+
+  .copyright{
+    left:50px;
+  }
 
 
 
-.prosgraphic{
-	width: 13%;
-	min-width: 180px;
-	position: relative;
-	left: 20%;
-	
-	opacity: .9;
-}
-	
-	
-	
-	
-	.footerwording{
-	left:50px;
-	
-}
+  .p1{
+    left: 10px;
+    padding:10px 22px; 
+  }
 
 
-.copyright{
-	left:50px;
-	
-	
-}
+  .p12{
+    left: 10px;
+    padding:10px 22px; 
+  }
 
+  .ftr1, .ftr2 {
+    text-align: center;
+  }
 
+  .footerwording, .copyright {
+    left: 0%;
+  }
 
+  .story2-content {
+    left: 0;
+    align-items: center;
+  }
+  
+  .story2-item {
+    width: 150px;
+  }
 
-.p1{
-	left: 10px;
-	padding:10px 22px; 
-}
+  .appicon {
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
+  .logo {
+    top: 2%;
+  }
 
-.p12{
-	left: 10px;
-	padding:10px 22px; 
-}
+  .gallerybox {
+    top: 10px;
+    right: 10px;
+  }
+
+  [class*=hint--][aria-label]:after {
+    white-space: pre-wrap;
+    width: 150px;
+  }
 }
